# project-michelin

./: .gitignore  CLAUDE.md  README.md  eda.py  main.py  michelin-plan.md  pyproject.toml
config/: features.yaml  pipeline.yaml
docs/: index.html
docs/css/: .gitkeep
docs/js/: inference.js  main.js  map.js
src/michelin/: __init__.py  config.py  pipeline.py
src/michelin/export/: __init__.py  artifacts.py  parity.py  to_onnx.py
src/michelin/features/: build.py  temporal.py  transforms.py
src/michelin/model/: conformal.py  dataset.py  evaluate.py  thresholds.py  train.py
tests/: test_config.py  test_identity.py  test_leakage.py  test_onnx_parity.py  test_panel.py  test_transforms.py
